# TinyML_Labs

./: README.md
gd32_test/: CMakeLists.txt  README.md
gd32_test/src/: Board.hpp  Led.cpp  Led.hpp  lcd.c  lcd.h  main.cpp  pwm.c  pwm.h  subrout.S  subrout.h  systick.c
hello_world/: hello_world.ipynb
hello_world/models/: model.keras  model_no_quant.tflite  model_quant.tflite  sine_model_quantized.cc
tflite_gd32_test/: CMakeLists.txt  Justfile  README.md  toolchain.cmake
tflite_gd32_test/src/: Point.cpp  Point.hpp  lcd.h  main.cpp  main_functions.cpp  main_functions.hpp  oledfont.h  subrout.S  subrout.h  systick.c  systick.h
